# robin-1

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  justfile  pyproject.toml  settings.yaml
.devcontainer/: Dockerfile  devcontainer.json
html/: dashboard.html
platform/: motor_interface.py
robin_py/: pyproject.toml
robin_py/perception/: pose_estimator.py
robin_py/platform/: camera_interface.py  motor_interface.py  platform_interface.py
robin_py/robin_py/platform/: camera_interface.py  motor_interface.py  platform_interface.py
scripts/: bind_usb_wsl2.bat  pi_platform_interface.py  run_robin_dashboard.py  run_robin_deploy.sh  stream_pi_cam.py
src/robin_core/robin_core_cpp/: CMakeLists.txt  package.xml
src/robin_core/robin_core_cpp/include/robin_core_cpp/: control_command.h  core.h  frames.h  point.h  twist.h  vehicle_settings.h  vehicle_state.h
src/robin_core/robin_core_cpp/src/: core.cpp
src/robin_core/robin_core_cpp/test/: test_core.cpp
src/robin_executor/robin_executor_ros_cpp/: CMakeLists.txt  package.xml
src/robin_executor/robin_executor_ros_cpp/src/: robin_executor_ros_node.cpp
src/robin_firmware/robin_firmware_cpp/: CMakeLists.txt  package.xml  robin_firmware_cpp.ino
src/robin_firmware/robin_firmware_cpp/include/robin_firmware_cpp/: command_codes.h  firmware_definitions.h  imu_reading.hpp  interface.hpp  motor_command.hpp
src/robin_firmware/robin_firmware_cpp/test/: test_imu_reading.cpp
src/robin_kinematic_model/robin_kinematic_model_cpp/: CMakeLists.txt  package.xml
src/robin_kinematic_model/robin_kinematic_model_cpp/include/robin_kinematic_model_cpp/: kinematic_model.h
src/robin_kinematic_model/robin_kinematic_model_cpp/src/: kinematic_model.cpp
src/robin_kinematic_model/robin_kinematic_model_cpp/test/: test_kinematic_model.cpp
src/robin_perception/robin_perception_cpp/: CMakeLists.txt  package.xml
src/robin_perception/robin_perception_cpp/include/robin_perception_cpp/: image_processor.h  imu_filter.h  madgwick_filter.h  perception_interface.h  slam_system.h  structures.h
src/robin_perception/robin_perception_cpp/src/: image_processor.cpp  imu_filter.cpp  madgwick_filter.cpp  perception_interface.cpp  slam_system.cpp
src/robin_perception/robin_perception_cpp/test/: test_imu_filter.cpp  test_perception_interface.cpp  test_slam_system.cpp
src/robin_ros2/robin_ros2_cpp/: CMakeLists.txt  package.xml
src/robin_ros2/robin_ros2_cpp/src/: robin_platform_interface_node.cpp
src/robin_ros2/robin_ros2_launch/: CMakeLists.txt  package.xml
src/robin_ros2/robin_ros2_launch/launch/: bring-up.py
src/robin_ros2/robin_ros2_py/: package.xml  setup.cfg  setup.py
src/robin_ros2/robin_ros2_py/html/: dashboard.html
src/robin_ros2/robin_ros2_py/robin_ros2_py/: dashboard_node.py  platform_client_node.py
