[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "robin_py"
version = "0.1.0"
description = "Platform utilities for the Robin project"
authors = [
    { name = "Carlos Braile", email = "andre.prze.filho@gmail.com" }
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "black>=25.9.0",
    "ruff>=0.13.2",
]

[project.optional-dependencies]
development = ["uv"]

[tool.setuptools]
py-modules = []
