[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "robin_py"
version = "0.1.0"
description = "Platform utilities for the Robin project"
authors = [
    { name = "Carlos Braile", email = "andre.prze.filho@gmail.com" }
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.9.0",
    "numpy>=2.3.3",
    "opencv-python-headless>=4.11.0.86",
    "pre-commit>=4.3.0",
    "pydantic>=2.11.9",
    "python-dateutil>=2.9.0.post0",
    "pyyaml>=6.0.3",
    "ruff>=0.13.2",
]

[project.optional-dependencies]
development = ["uv"]

[tool.setuptools]
py-modules = []
