<?xml version="1.0"?>
<package format="3">
  <name>robin_firmware_cpp</name>
  <version>0.0.1</version>
  <description>Header-only C++ library for Robin firmware (shared with Arduino).</description>
  <maintainer email="andre.prze.filho@gmail.com">braile</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>Boost</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
