<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robin_ros2_launch</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="andre.prze.filho@gmail.com">braile</maintainer>
  <license>TODO: License declaration</license>

  <depend>robin_ros2_cpp</depend>
  <depend>robin_ros2_py</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
